# folia

./: .gitignore  README.en.md  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  tsconfig.persistence.json  vite.config.ts
docs/: demo-database.md  editor-shortcuts.md  progress.md  typora-theme-audit-report.json  typora-theme-audit.md  typora-theme-capability-audit.md  typora-theme-compat-plan.md  typora-theme-targets.md
docs/superpowers/specs/: 2026-06-12-block-first-notebook-design.md  (+12 more)
scripts/: audit-typora-themes.mjs  cleanup-broken-notion-images.mjs  editor-smoke.mjs  generate-emoji-records.mjs  generate-local-emoji-assets.mjs  generate-typora-mark-bridge.mjs  image-annotation-text-smoke.mjs  markdown-folder-import-smoke.mjs  markdown-folder-stress.mjs  markdown-import-smoke.mjs  migrate-sqlite-data-assets.mjs  persistence-queue-smoke.mjs  recover-work-pages.mjs  switch-folia-database.mjs  temporary-markdown-open-smoke.mjs  theme-smoke.mjs  typora-css-prefixer.mjs  workspace-view-model-smoke.mjs
src/: App.tsx  app-utils.ts  editor.tsx  emoji-assets.ts  emoji-image.tsx  emoji-picker.tsx  html-utils.ts  icon-pack-dialog.tsx  icon-packs.ts  image-annotations.tsx  main.tsx  metadata-fields.ts  page-calendar.ts  shells.tsx  state.ts  styles.css  types.ts  typora-theme-registry.ts  workspace-view-model.ts  workspace.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/styles/: theme-contract.css  typora-content.css  typora-editor-chrome.css  typora-shell.css
(+29 files in other folders)
