[package]
name = "block_first_notebook"
version = "0.1.0"
description = "A block-first personal notebook"
authors = ["laeglaur"]
edition = "2021"

[lib]
name = "block_first_notebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
